tests/elab_fail/247.lean.out.expected
247.lean:8:11-8:33: error: Cannot lift nested action `← uinfoldDefinition? b` over a binder.
This error usually happens when you are trying to lift a method nested in a `fun`, `let`, or `match`-alternative, and it can often be fixed by adding a missing `do`.
